# earth2-weather-analytics

./: .gitignore  README.md  example_pipeline.ipynb
earth2studio-project/: hatyai_flood_nov2025_earth2studio_demo.ipynb  hatyai_flood_nov2025_earth2studio_demo.py  hatyai_flood_nov2025_earth2studio_monsoon_animation_real_inference.py  hatyai_flood_nov2025_earth2studio_real_inference.ipynb  hatyai_flood_nov2025_earth2studio_real_inference.py  hatyai_flood_nov2025_earth2studio_real_inference_thai_exec.ipynb  hatyai_flood_nov2025_earth2studio_real_inference_thai_exec.py  pyproject.toml
earth2studio-project/01_getting_started/: 01_deterministic_workflow.ipynb  01_deterministic_workflow.th.ipynb  02_diagnostic_workflow.th.ipynb  03_ensemble_workflow.th.ipynb
earth2studio-project/02_medium_range/: 01_ensemble_workflow_extend.th.ipynb  02_model_perturbation_hook.th.ipynb  03_huge_ensembles.th.ipynb  04_temporal_interpolation.th.ipynb  05_cyclone_tracking.th.ipynb
earth2studio-project/03_downscaling/: 01_corrdiff_inference.th.ipynb  02_cbottle_super_resolution.th.ipynb  03_ensemble_downscaling.th.ipynb
earth2studio-project/04_nowcasting/: 01_stormcast_example.th.ipynb  02_stormcast_ensemble_example.th.ipynb  03_stormscope_goes_example.th.ipynb
earth2studio-project/05_data_assimilation/: 02_healda.th.ipynb
earth2studio-project/06_seasonal/: 01_seasonal_statistics.ipynb  01_seasonal_statistics.th.ipynb  02_dlesym_example.th.ipynb
earth2studio-project/07_misc/: 01_distributed_manager.ipynb  01_distributed_manager.th.ipynb  02_cbottle_generation.th.ipynb  (+2 more)
(+28 files in other folders)
