[project]
name = "earth2studio-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "earth2studio[aurora,cbottle,corrdiff,cyclone,da-stormcast,data,dlwp,perturbation,sfno,stormcast]",
    "cuml-cu13==26.2.*",
    "libcuml-cu13==26.2.*",
    "libraft-cu13==26.2.*",
    "pylibraft-cu13==26.2.*",
    "onnx>=1.21.0",
    "onnxscript>=0.7.0",
    "ipykernel>=7.2.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "jupyterlab>=4.5.6",
    "notebook>=7.5.5",
    "onnxruntime-gpu",
]

[tool.uv.sources]
earth2studio = { git = "https://github.com/NVIDIA/earth2studio.git" }
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
onnxruntime-gpu = { path = "build/onnxruntime/build/Linux/Release/dist/onnxruntime_gpu-1.26.0-cp313-cp313-linux_aarch64.whl" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
